styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");

html,
body {
  padding: 0;
  margin: 0;
  font-size: 14px;
  font-family: "Press Start 2P", -apple-system, BlinkMacSystemFont, Segoe UI,
    Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
    sans-serif;
  width: 100vw;
  overflow-y: hidden;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

#app {
  width: 100vw;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  text-align: center;

  background-image: url("data:image/svg+xml;utf8,\<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100'>\<rect fill='%2300000' width='50' height='50' x='0' y='0' />\<rect fill='%23000' width='50' height='50' x='50' y='50' />\<rect fill='%23ffffff00' width='50' height='50' x='50' y='0' />\<rect fill='%23ffffff00' width='50' height='50' x='0' y='50' />\</svg>"),
    url(https://abrilveja.files.wordpress.com/2018/01/mallandro.png);
  background-size: 80px, cover;
  height: 100vh;
  animation: gradient 30s ease infinite;
}

.form-container {
  background-color: white;
  border-radius: 20px;
  width: 60vw;
  padding: 20px;
}

.tittle {
  font-weight: 700;
  font-size: 20px;
}

.image1 {
  width: 20vw;
  border-radius: 20px;
}

.colorGradient {
  background: linear-gradient(90deg, red, blue);
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
  display: inline;
}

@keyframes gradient {
  0% {
    background-color: red;
  }
  20% {
    background-color: yellow;
  }
  40% {
    background-color: green;
  }
  60% {
    background-color: blue;
  }
  80% {
    background-color: purple;
  }
  100% {
    background-color: red;
  }
}

.header {
  z-index: 999999;
  display: flex;
  background-color: white;
  justify-content: space-around;
  width: 100vw;
  padding: 10px;
  align-items: center;
}

.button {
  height: 45px;
  width: 200px;
  font-weight: bold;
  font-size: 12px;
  color: rgb(255, 255, 255);
  box-shadow: rgb(38 120 113 / 15%) 0px 4px 20px 5px;
  border-radius: 20px;
  border: none;
  cursor: pointer;
  display: flex;
  -webkit-box-align: center;
  align-items: center;
  -webkit-box-pack: center;
  justify-content: center;
  margin-top: 0px;
  margin-bottom: 0px;
  font-family: "PRESS START 2P";
  animation: button 5s ease infinite;
}

.mr-10 {
  margin-right: 10px !important;
}

.content-container {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  flex-direction: row;
}

@keyframes button {
  0% {
    background-color: green;
  }
  20% {
    background-color: blue;
  }
  70% {
    background-color: purple;
  }
  100% {
    background-color: green;
  }
}

.menus {
  display: flex;
}

.menus div {
  margin-left: 20px;
  margin-right: 20px;
}

@media (max-width: 600px) {
  .header {
    flex-direction: column;
  }

  .header div {
    margin-top: 10px;
  }


  .form-container {
    margin-top: 20px;
    width: 90vw;
  }

  .disable-on-600 {
    display: none !important;
  }

  .image-frame {
    height: 150px;
    flex: auto !important;
  }

  .button {
    margin-top: 10px;
  }

  .mobile-flex {
    flex-direction: column;
  }
}

@media (max-width: 400px) {
  .disable-on-400 {
    display: none !important;
  }
}

@media (max-width: 1100px) {
  .content-container {
    flex-direction: column;
  }

  html {
    overflow-y: scroll;
    overflow-x: auto;
  }

  #app {
    height: 135vh;
  }

  
}

